[gd_scene load_steps=9 format=3 uid="uid://2ij8q0r7uy4y"]

[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueDisplay/que_display_control.gd" id="1_qogk3"]
[ext_resource type="Texture2D" uid="uid://io35wpu802fp" path="res://assets/Sprites/UI/BackPatches/Patch_64_12.png" id="2_y0k3q"]
[ext_resource type="Texture2D" uid="uid://cu00gc8hhk0h3" path="res://assets/Sprites/UI/QueInputAndDisplay/page_slot.png" id="3_g4vab"]
[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueDisplay/que_display_control_slot.gd" id="4_m80jh"]
[ext_resource type="Texture2D" uid="uid://dgfxtmtdjfgey" path="res://assets/Sprites/UI/QuePathArrow.png" id="5_1shq4"]
[ext_resource type="Texture2D" uid="uid://by451vuljblvx" path="res://assets/Sprites/UI/QueInputAndDisplay/page_slot_highlight.png" id="5_awnhx"]
[ext_resource type="Texture2D" uid="uid://mglbobw62vc1" path="res://assets/Sprites/UI/QueInputAndDisplay/page_gap_slot.png" id="7_xxjie"]
[ext_resource type="Texture2D" uid="uid://clnubp7dsthut" path="res://assets/Sprites/UI/QueInputAndDisplay/dead_page_slot.png" id="8_2n88r"]

[node name="QueDisplayControl" type="Control" node_paths=PackedStringArray("portrait", "main_container", "slot_button_prefab", "slots_container")]
custom_minimum_size = Vector2(100, 56)
layout_mode = 3
anchors_preset = 0
offset_right = 56.0
offset_bottom = 56.0
script = ExtResource("1_qogk3")
portrait = NodePath("HBoxContainer/PortraitTextureRect")
main_container = NodePath("HBoxContainer")
slot_button_prefab = NodePath("HBoxContainer/PageSlotButtonPrefab")
slots_container = NodePath("HBoxContainer/SlotsContainer")
show_gaps = true

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y0k3q")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 52.0
offset_bottom = 48.0

[node name="PortraitTextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="PageSlotButtonPrefab" type="TextureButton" parent="HBoxContainer" node_paths=PackedStringArray("gap_texture", "icon", "highlight", "dead_icon")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("3_g4vab")
stretch_mode = 3
script = ExtResource("4_m80jh")
gap_texture = NodePath("GapTextureRect")
icon = NodePath("Icon")
highlight = NodePath("SlotHighlight")
dead_icon = NodePath("DeadSlotIcon")

[node name="GapTextureRect" type="TextureRect" parent="HBoxContainer/PageSlotButtonPrefab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xxjie")

[node name="Icon" type="TextureRect" parent="HBoxContainer/PageSlotButtonPrefab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="SlotHighlight" type="TextureRect" parent="HBoxContainer/PageSlotButtonPrefab"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_awnhx")

[node name="DeadSlotIcon" type="TextureRect" parent="HBoxContainer/PageSlotButtonPrefab"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_2n88r")

[node name="SlotsContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="QuePathArrow" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_1shq4")
